...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_gold_medal" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Username"
        android:textColorHint="#eee"
        android:backgroundTint="#eee"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:hint="Password"
        android:inputType="textPassword"
        android:backgroundTint="#eee"
        android:textColorHint="#ddd"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
...
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat"
        android:onClick="openHome"
        android:text="Login"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
