<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gradient">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/caudex"
        android:text="@string/daily_calories"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/snack_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/caudex"
        android:text="@string/snack"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/snack_calories"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/meal_tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:tabGravity="fill"
        app:tabIndicatorAnimationDuration="250"
        app:tabIndicatorColor="#D5CBCB"
        app:tabIndicatorGravity="bottom"
        app:tabMode="auto"
        app:tabPadding="20dp"
        app:tabSelectedTextColor="#6EA7CD"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:tabTextColor="#F8F6F6">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/breakfast_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/lunch_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/dinner_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinner" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/meal_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/fragment"
        app:layout_constraintBottom_toTopOf="@+id/snack_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_tab_layout">


    </androidx.viewpager2.widget.ViewPager2>

    <TextView
        android:id="@+id/water_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/caudex"
        android:text="@string/water"
        android:textColor="#FDFDFD"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/water_taken"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/water_taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/caudex"
        android:text="0 ml (0 cups)"
        android:textColor="#9C9999"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_back_arrow"
        android:text="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_water"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:contentDescription="add water"
        android:focusable="auto"
        android:hapticFeedbackEnabled="true"
        android:soundEffectsEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/water_taken"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <ImageView
        android:id="@+id/remove_water"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_water"
        app:layout_constraintEnd_toStartOf="@+id/add_water"
        app:srcCompat="@drawable/ic_remove" />

    <EditText
        android:id="@+id/snack_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/caudex"
        android:hint="80"
        android:inputType="number"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/water_text_view"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_snack_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@android:drawable/ic_menu_add"
        android:text="@string/add"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/snack_calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/snack_calories" />


</androidx.constraintlayout.widget.ConstraintLayout>