<resources>
    <string name="app_name">fitness-tracker</string>
    <string-array name="distance_units">
        <item>mi</item>
        <item>km</item>
    </string-array>
    <string-array name="body_parts">
        <item name="none">- None -</item>
        <item name="biceps">Biceps</item>
        <item name="triceps">Triceps</item>
        <item name="quads">Quads</item>
        <item name="traps">Traps</item>
        <item name="calves">Calves</item>
        <item name="forearms">Forearms</item>
        <item name="deltoids">Deltoids</item>
        <item name="glutes">Glutes</item>
        <item name="back">Back</item>
        <item name="chest">Chest</item>
        <item name="abs">Abs</item>

    </string-array>

    <string name="save">Save</string>
    <string name="add">ADD</string>
    <string name="analysis">Analysis</string>
    <string name="weight_label">Weight:</string>
    <string name="metrix_tag">lb</string>
    <string name="weight_hint">200</string>
    <string name="date_label">Date:</string>
    <string name="date_hint">2022/02/25</string>
    <string name="todaySwitch">Today\'s weight</string>
    <string name="todo">TODO</string>

    <string name="daily_calories">Daily Calories</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="fragment">fragment</string>
    <string name="water">Water</string>
    <string name="snack">Snack</string>
    <string name="enter_snack_calories">Enter snack calories</string>
    <string name="enter_amount_in_ml">Enter amount in ml</string>
    <string name="go_back">go back</string>

    <!-- account info: name, email, confirm email, username, password -->
    <!-- profile: weight, goal weight, !!profile pic!! -->
    <!-- settings: clear workout db, clear weight log db, notifications toggle-->


    <!-- Preference Titles -->
    <string name="account_header">Account Information</string>
    <string name="profile_header">Profile</string>
    <string name="settings_header">Settings</string>


    <!-- Messages Preferences -->
    <string name="name_title">Full Name</string>
    <string name="email_title">Email</string>
    <string name="confirm_email_title">Confirm Email</string>
    <string name="profile_title">Change Profile Picture</string>

    <string name="username_title">Username</string>
    <string name="password_title">Password</string>

    <string name="weight_title">Current Weight [lbs]</string>
    <string name="goal_title">Goal Weight [lbs]</string>
    <string name="fasting_mode">Fasting Mode</string>

    <string name="clear_workout">Clear Workout Database</string>
    <string name="logout">Log Out</string>
    <string name="clear_log">Clear Weight Log Database</string>
    <string name="notifications">Notifications</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_options_menu">options_menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="title_activity_avator_selector">AvatorSelector</string>
    <string name="change_profile_picture">Change Profile Picture</string>

</resources>