...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


    <ProgressBar
        android:id="@+id/daily_goal_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="201dp"
...
